--- a/doks-theme/_includes/site-header.html
+++ b/doks-theme/_includes/site-header.html
@@ -14,14 +14,14 @@
 			<div class="row">
 				<div class="col-xs-12">
 
-						<a href="{% if jekyll.environment == 'production' %}{{ site.doks.baseurl }}{% endif %}/" class="site-header__logo">
+						<a href="/" class="site-header__logo"> <!-- Removed relative reference -->
 							<img src="{% if jekyll.environment == 'production' %}{{ site.doks.baseurl }}{% endif %}/doks-theme/assets/images/layout/logo.svg">
 						</a><!-- /.site-header__logo -->
 
 					{% if site.doks.header.nav %}
 						<ul class="site-header__nav hidden-xs">
 							{% for item in site.doks.header.nav %}
-								<li><a href="{% if jekyll.environment == 'production' %}{{ site.doks.baseurl }}{% endif %}{{ item.item_url }}">{{ item.item_name }}</a></li>
+								<li><a href="{{ item.item_url }}">{{ item.item_name }}</a></li> <!-- Removed relative reference -->
 							{% endfor %}
 						</ul><!-- /.site-header__nav -->
 						<button class="offcanvas-toggle visible-xs">
