--- a/doks-theme/_includes/site-header.html
+++ b/doks-theme/_includes/site-header.html
@@ -23,6 +23,7 @@
 							{% for item in site.doks.header.nav %}
 								<li><a href="{{ item.item_url }}">{{ item.item_name }}</a></li> <!-- Removed relative reference -->
 							{% endfor %}
+							<li><a href="{% if jekyll.environment == 'production' %}{{ site.doks.baseurl }}{% endif %}{{ item.item_url }}">Course</a></li>
 						</ul><!-- /.site-header__nav -->
 						<button class="offcanvas-toggle visible-xs">
 							<span></span>
